@@ -4,6 +4,7 @@
 - Security issue fixed that could only be exploited by a logged on user.
 - Enable debug mode with CTRL+F7
 - Added possibility to add the customfields of a user to an email template like {user:col_**}
+- Added "Delete all items" buttons to tasklist, calendar and addressbook administration dialog
 
 07-11-2012 4.0.124
 - E-mail Inbox and account nodes expanded by default again
